# mlbb-analyzer-service

./: .env.example  .gitignore  .hermes-kanban.yaml  README.md  pyproject.toml
app/: __init__.py  main.py  server.py
app/analyzer/: __init__.py  ai.py  detail.py  deterministic.py  errors.py  prompt.py
app/analyzer/providers/: __init__.py  base.py  openai.py  opencode_zen.py  openrouter.py  relay.py
app/api/: analyze.py  counters.py  health.py  heroes.py  synergies.py
app/core/: __init__.py  config.py  rate_limit.py
app/data/: __init__.py  loader.py  validation.py
app/data/static/: counters.json  heroes.json  synergies.json
app/data/static/counters/: aamon.json  akai.json  aldous.json  alice.json  alpha.json  alucard.json  angela.json  argus.json  arlott.json  atlas.json  aulus.json  aurora.json  badang.json  balmond.json  bane.json  barats.json  baxia.json  beatrix.json  belerick.json  benedetta.json  brody.json  bruno.json  carmilla.json  cecilion.json  change.json  chip.json  (+106 more)
app/schemas/: analysis.py  counter.py  hero.py  openapi.py  synergy.py
docs/: 00-project-context.md  01-api-contract.md  02-dataset-contract.md  03-ai-scoring-contract.md  04-implementation-plan.md  05-frontend-integration.md  06-counter-proof-workflow.md  06-repository-linking.md  07-synergy-proof-workflow.md
public/data/: README.md
public/data/counters/: alice.json  tigreal.json
tests/: test_ai_analyzer.py  test_analyze_contract.py  test_counters_api.py  test_dataset.py  test_heroes_api.py  test_prompt.py  test_providers.py  test_synergies_api.py  test_synergy_analyzer.py
(+133 files in other folders)
