[project]
name = "mlbb-analyzer-service"
version = "0.1.0"
description = "FastAPI service for MLBB counter analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.0",
  "openrouter>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "docs*", "public*", "tests*"]

[tool.setuptools.package-data]
"app.data" = ["static/**/*.json", "static/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:capture"]

[tool.vercel]
entrypoint = "app.main:app"

[tool.ruff]
line-length = 100
target-version = "py312"
